# deconv

./: .gitignore  .gitmodules  1 - run csx varying simple parameters and data produced by the web app.ipynb  1b - analyze csx results for different parameters.ipynb  2 - run csx excluding cell types.ipynb  2.1b - analyze and plot (absolute counts, not fractions).ipynb  3 - cell subtyping.ipynb  3b - analyze cell type grouping on tirosh.ipynb  3c - analyze differences in signature matrices.ipynb  4 - run expression imputation.ipynb  4_run_hires.sh  5 - run expression imputation with fake data.ipynb  5c - expression imputation on tirosh-derived mixtures.ipynb  5e - analyze individual genes.ipynb  6a - make cohorts.ipynb  6b - make cohorts with tcga skcm proportions.ipynb  6c - PCA of TCGA SKCM.ipynb  6d - analyze bulk cohorts.ipynb  6e - check genes for low expression.ipynb  8b - hg19 vs hg38 for TCGA SKCM counts.ipynb  8c - get all hg19, hg38 data from GDC files.ipynb  8d - lookup gene names for hg38 FPKM files.ipynb  9b - plots .ipynb  9c - optimize pseudobulk params.ipynb  9d - differential expression of pseudo, tcga.ipynb  Load Derek's in silico mixture data, results for GEP imputation with 2sd perturbation.ipynb  Load Derek's results for 2sd perturbations.ipynb  Load Derek's sc data from GEO.ipynb  Load data from Derek's txt files.ipynb  Load data from Le et al, 2020.ipynb  Load data used by CIBERSORTx.ipynb  Load everything for derek's 2sd simulations.ipynb  Load example data from cibersortx, including tirosh.ipynb  Load example files for CIBERSORTx.ipynb  Load sim2_sd.RData in R.ipynb  Look at Amy's data (Pan-IO Datasets).ipynb  Look at mixtures in pseudobulks, regress on sc data.ipynb  README.md  Run CIBERSORTx.ipynb  Run csx on in silico bulks with scRNA-seq reference sample used in paper.ipynb  (+22 more)
1_data_preprocessing/: 6c - PCA of TCGA SKCM.ipynb  6e - check tcga skcm genes for low expression.ipynb  6f - parse TCGA SKCM metadata.ipynb  8d - lookup gene names for hg38 FPKM files.ipynb  9a - qa of jerby-arnon.ipynb
2_pseudobulk_generation/: 6a - make cohorts.ipynb  6d - analyze bulk cohorts.ipynb  intersample_correlation.ipynb  make pseudobulks for optimization, v2.ipynb  make pseudobulks for optimization.ipynb  view metrics for different pseudobulk parameters.ipynb  view pseudobulk differential expression.ipynb  view pseudobulks for optimization.ipynb
analysis/: _config.yml  _toc.yml  background.md  (+8 more)
(+278 files in other folders)
