[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helpers"
authors = [{name = "William Grisaitis", email = "wgrisaitis@gmail.com"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/grisaitis"

[tool.isort]
profile = "black"

[tool.black]
exclude = '(\.virtual_documents|\.ipynb_checkpoints|2\.1\ -\ run\ csx.*|2\ -\ run\ csx.*|.*txt\ files\.ipynb)'

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "line-too-long",
]

[tool.pylint.BASIC]
variable-rgx = '^[a-z][a-z0-9]*((_[a-z0-9]+)*)?$'
argument-rgx = '^[a-z][a-z0-9]*((_[a-z0-9]+)*)?$'

[tool.pylint.LOGGING]
logging-format-style = "fstr"  # allow f-string formatting for logging messages
