[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helpers"
authors = [{name = "William Grisaitis", email = "wgrisaitis@gmail.com"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/grisaitis"

[tool.isort]
profile = "black"

[tool.black]
exclude = '(old_stuff|build|\.virtual_documents|\.ipynb_checkpoints|.*txt\ files\.ipynb)'
line-length = 100

[tool.pylint.messages_control]
disable = [
  "line-too-long",
  "missing-function-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
]

[tool.pylint.BASIC]
variable-rgx = '^[a-z][a-z0-9]*((_[a-z0-9]+)*)?$'
argument-rgx = '^[a-z][a-z0-9]*((_[a-z0-9]+)*)?$'
